[146] Remove Guava dependency in oes.model
Bug: https://github.com/eclipse-sirius/sirius-desktop/issues/146
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>